Feature/submodules (#23)
* refactor project and add sub-modules

* improving test suite on GitHub actions

* add gradle build scan terms of service agreement